asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__pull__pull_from_elsewhere.snap
---
source: asyncgit/src/lib/tui/git/tests/pull.rs
assertion_line: 78
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git pull origin                                                               |
Already up to date.                                                             |
styles_hash: baa329f6340fcc8b
