asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__pull__pull_menu_existing_push_remote_and_upstream.snap
---
source: asyncgit/src/lib/tui/git/tests/pull.rs
assertion_line: 17
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Pull                    Arguments                                               |
p from origin           -r Rebase local commits (--rebase)                      |
u from origin/main                                                              |
e from elsewhere                                                                |
q/<esc> Quit/Close                                                              |
styles_hash: bfa894f169425746
