asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__pull__pull_push_remote.snap
---
source: asyncgit/src/lib/tui/git/tests/pull.rs
assertion_line: 35
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git pull origin refs/heads/main                                               |
From                                                                            |
 * branch            main       -> FETCH_HEAD                                   |
Already up to date.                                                             |
styles_hash: a7f12e4c3c38781e
