asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__pull__pull_push_remote_prompt.snap
---
source: asyncgit/src/lib/tui/git/tests/pull.rs
assertion_line: 48
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Set pushRemote then pull: ›                                                   |
styles_hash: e0d524e635f78ab7
