asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__pull__pull_setup_upstream.snap
---
source: asyncgit/src/lib/tui/git/tests/pull.rs
assertion_line: 55
expression: ctx.redact_buffer()
---
▌On branch new-branch                                                           |
▌Your branch is up to date with 'refs/heads/main'.                              |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main new-branch origin/main add initial-file                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Pull                            Arguments                                       |
p pushRemote, setting that      -r Rebase local commits (--rebase)              |
u from main                                                                     |
e from elsewhere                                                                |
q/<esc> Quit/Close                                                              |
styles_hash: 135771421537ce83
